styles/style.css
/* Font Face */

@font-face {
  font-family: 'SFProDisplay-Regular';
  src: url('../assets/fonts/SFProDisplay-Regular.ttf');
}

@font-face {
  font-family: 'SFProDisplay-Medium';
  src: url('../assets/fonts/SFProDisplay-Medium.ttf');
}

@font-face {
  font-family: 'SFProDisplay-Bold';
  src: url('../assets/fonts/SFProDisplay-Bold.ttf');
}

@font-face {
  font-family: 'LibreBaskerville-Regular';
  src: url('../assets/fonts/LibreBaskerville-Regular.ttf');
}

@font-face {
  font-family: 'LibreBaskerville-Bold';
  src: url('../assets/fonts/LibreBaskerville-Bold.ttf');
}

@font-face {
  font-family: 'Poppins-Bold';
  src: url('../assets/fonts/Poppins-Bold.ttf');
}

@font-face {
  font-family: 'SourceSansPro-Bold';
  src: url('../assets/fonts/SourceSansPro-Bold.ttf');
}

@font-face {
  font-family: 'Gilroy-Bold';
  src: url('../assets/fonts/Gilroy-Bold.ttf');
}

@font-face {
  font-family: 'BebasNeue-Regular';
  src: url('../assets/fonts/BebasNeue-Regular.ttf');
}

@font-face {
  font-family: 'NeueMontreal-Medium';
  src: url('../assets/fonts/NeueMontreal-Medium.otf');
}

@font-face {
  font-family: 'Ballinger-Condensed-X-Bold';
  src: url('../assets/fonts/Ballinger-Condensed-X-Bold.otf');
}

@font-face {
  font-family: 'NeueHaasGroteskTXPro-65Md';
  src: url('../assets/fonts/NeueHaasGroteskTXPro-65Md.otf');
}

/* Root */

:root {
  /* Color Variables */

  --primary-color: #1D1D1F;
  --secondary-color: #FFFFFF;
  --tertiary-color: #A5A5A5;
  --black: #000;
  --white: #FFF;

  /* Font Variables */

  --sf-pro-display-regular: 'SFProDisplay-Regular';
  --sf-pro-display-medium: 'SFProDisplay-Medium';
  --sf-pro-display-bold: 'SFProDisplay-Bold';

  --libre-baskerville-regular: 'LibreBaskerville-Regular';
  --libre-baskerville-bold: 'LibreBaskerville-Bold';

  --poppins-bold: 'Poppins-Bold';
  --source-sans-pro-bold: 'SourceSansPro-Bold';
  --gilroy-bold: 'Gilroy-Bold';
  --bebas-neue-regular: 'BebasNeue-Regular';
  --neue-montreal-medium: 'NeueMontreal-Medium';
  --neue-haas-grostesk-tx-pro-65-medium: 'NeueHaasGroteskTXPro-65Md';
  --ballinger-condensed-x-bold: 'Ballinger-Condensed-X-Bold';
}

/* Global */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: var(--primary-color);
  /* font-family: -apple-system, BlinkMacSystemFont, var(--sf-pro-display-regular), sans-serif; */
  font-family: Inter, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  letter-spacing: -0.5px !important;
}

body.ios_device h1,
body.ios_device h2,
body.ios_device h3,
body.ios_device h4,
body.ios_device h5,
body.ios_device h6 {
  /* font-family: -apple-system, BlinkMacSystemFont, sans-serif !important; */
  font-family: Inter, sans-serif;
}

body.android_device h1,
body.android_device h2,
body.android_device h3,
body.android_device h4,
body.android_device h5,
body.android_device h6 {
  /* font-family: 'SFProDisplay-Bold', sans-serif; */
  font-family: Inter, sans-serif;
}

p {
  /* letter-spacing: -0.8px; */
}

ul {
  list-style: none;
}

/* Button */

input[type="submit"],
button,
.btn {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  cursor: pointer;
  width: fit-content;
  height: max-content;
  padding: 12px 16px;
  outline: none;
  border: none;
  border-radius: 2px;
  font-size: 14px;
  -webkit-appearance: none;
}

input[type="submit"] > .prefix,
input[type="submit"] > .suffix,
button > .prefix,
button > .suffix,
.btn > .prefix,
.btn > .suffix {
  display: flex;
  align-items: center;
}

input[type="submit"] > .prefix > .icon,
input[type="submit"] > .suffix > .icon
button > .prefix > .icon,
button > .suffix > .icon,
.btn > .prefix > .icon,
.btn > .suffix > .icon {
  transition: 0.25s;
}

.solid_btn {
  background-color: var(--primary-color);
  color: var(--secondary-color);
}

.solid_btn:hover {
  background-color: #333;
}

.solid_btn:hover:active {
  background-color: #000;
}

.solid_btn > p {
  color: var(--secondary-color);
}

.text_btn {
  padding: 0;
  background: none;
}

/* Link */

a {
  text-decoration: none;
}

/* Image & Video */

img,
video {
  width: 100%;
}

/* Container */

.container {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

/* Navigation Bar */

header {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;
  transition: top 0.5s ease-in-out;
}

header nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 32px 24px;
  background-color: var(--secondary-color);
}

header nav > a > .logo {
  transition: 0.25s;
  width: 32px;
}

header nav > a:hover > .logo {
  filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(75%);
}

header nav > a > .brand_logo {
  display: none;
}

header nav > ul:first-of-type {
  display: none;
}

header nav > ul > li {
  display: flex;
  align-items: center;
}

header nav > ul > li > a {
  font-size: 14px;
  color: var(--tertiary-color);
}

header nav > ul > li > .link {
  padding: 0;
  color: var(--tertiary-color);
}

header nav > ul > li > a:hover,
header nav > ul > li > .link:hover {
  color: var(--primary-color);
  text-decoration: underline;
}

header nav > ul > li > a > img {
  width: 20px;
  height: 20px;
  filter: invert(15%);
}

header nav > ul > li > .link:hover > img {
  filter: invert(1);
}

header.navigation_bar__project nav > ul > li > img {
  filter: invert(1) grayscale(1) brightness(0) contrast(100%);
}

header.navigation_bar__project nav > ul > li > p {
  color: #1D1D1F;
}

header.navigation_bar__project nav > ul > li > .link > img {
  filter: invert(1);
}

header nav > ul > li > p {
  margin-left: 6px;
  margin-bottom: 2px;
  font-size: 14px;
  color: var(--tertiary-color);
}

header nav > ul > li > button > .prefix .icon {
  width: 16px;
}

header nav > ul > li > button:hover > .prefix .icon {
  filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(75%);
  fill: var(--primary-color);
}

/* Footer */

footer {
  background-color: #1D1D1F;
}

footer > .container {
  display: flex;
  flex-direction: column;
  gap: 48px;
  padding: 48px 24px;
}

footer > .container > .text_and_links {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

footer > .container > .text_and_links > p {
  color: #747474;
  font-size: 16px;
}

footer > .container > .text_and_links > .links {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

footer > .container > .text_and_links > .links > a {
  color: #CCC;
  letter-spacing: -0.28px;
  font-size: 14px;
}

footer > .container > .logo_and_paragraph {
  display: flex;
  flex-direction: column;
  gap: 48px;
}

footer > .container > .logo_and_paragraph > img {
  width: 250px;
}

footer > .container > .logo_and_paragraph > p {
  color: #747474;
  font-size: 14px;
  line-height: 20px;
}

footer > .container > .separator {
  display: inline-block;
  width: 100%;
  height: 1px;
  background-color: #555;
}

footer > .container > .credit_and_country {
  display: flex;
  flex-direction: column;
  gap: 48px;
}

footer > .container > .credit_and_country > .credit,
footer > .container > .credit_and_country > .credit > span {
  color: #747474;
  letter-spacing: -0.28px;
  font-size: 14px;
}

footer > .container > .credit_and_country > .country {
  display: flex;
  align-items: center;
  gap: 8px;
}

footer > .container > .credit_and_country > .country > p {
  color: #747474;
}

footer > .container > .credit_and_country > .country > img {
  width: 28px;
  height: 14px;
}

/* Scroll Animation */

.hidden {
  transform: translateY(32px);
  transition: all 1.25s;
  opacity: 0;
}

.show {
  transform: translateY(0);
  opacity: 1;
  filter: blur(0);
}

/* Media Queries */

/* Screen Width: 768px */

@media only screen and (min-width: 768px) {
  /* Navigation Bar */

  header nav {
    padding: 40px 64px;
  }

  header nav > a > .brand_logo {
    width: 40px;
  }

  /* Intro */

  #intro > #txt {
    font-size: 40px;
  }

  /* Footer */

  footer > .container {
    gap: 48px;
    padding: 64px;
  }

  footer > .container > .text_and_links {
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 16px;
  }

  footer > .container > .text_and_links > p {
    letter-spacing: -0.4px;
    font-size: 20px;
  }

  footer > .container > .text_and_links > .links {
    width: 200px;
  }

  footer > .container > .logo_and_paragraph {
    flex-direction: row;
    justify-content: space-between;
  }

  footer > .container > .logo_and_paragraph > p {
    width: 300px;
    text-align: end;
  }

  footer > .container > .credit_and_country {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
}

/* Screen Width: 1280px */

@media only screen and (min-width: 1280px) {
  h1, h2, h3, h4, h5, h6 {
    letter-spacing: -0.8px !important;
  }

  p {
    letter-spacing: -0.5px;
  }

  /* Intro */

  #intro > #txt > .span {
    display: inline-block;
  }

  /* Navigation Bar */

  header nav > a > .esenway_logo {
    display: none;
  }

  header nav > a > .brand_logo {
    display: block;
    width: 120px;
  }

  header nav > ul:first-of-type {
    display: flex;
    align-items: center;
    gap: 24px;
  }

  header nav > ul:last-of-type {
    display: none;
  }

  header nav > ul > li > a {
    letter-spacing: -0.5px;
    font-weight: 500;
  }

  /* Footer */

  footer > .container {
    gap: 80px;
    padding: 80px 100px;
  }

  footer > .container > .text_and_links {
    margin-bottom: 70px;
  }

  footer > .container > .text_and_links > p {
    letter-spacing: -0.4px;
    font-size: 18px;
    font-weight: 500;
  }

  footer > .container > .text_and_links > .links {
    width: 150px;
  }

  footer > .container > .text_and_links > .links > a {
    letter-spacing: -0.14px;
  }

  footer > .container > .text_and_links > .links > a:hover {
    text-decoration: underline;
  }

  footer > .container > .logo_and_paragraph > img {
    width: 400px;
  }

  footer > .container > .logo_and_paragraph > p {
    width: 300px;
    font-size: 16px;
    line-height: 24px;
  }

  footer > .container > .credit_and_country > .credit {
    font-size: 16px;
  }
}

/* Screen Width: 1440px */

@media only screen and (min-width: 1440px) {
  /* Navigation Bar */

  header nav {
    padding: 40px 100px;
  }

  header nav > a > .brand_logo {
    display: block;
    width: 140px;
  }

  header nav > ul {
    gap: 32px;
  }
}

/* Screen Width: 1920px */

@media only screen and (min-width: 1920px) {
  /* Navigation Bar */

  header nav {
    padding: 40px 200px;
  }

  /* Footer */

  footer > .container {
    padding: 80px 200px;
  }

  footer > .container > .text_and_links > .links > a {
    letter-spacing: -0.6px;
    font-size: 15px;
  }

  footer > .container > .logo_and_paragraph > p {
    line-height: 24px;
    font-size: 16px;
  }

  footer > .container > .credit_and_country > .credit {
    font-size: 16px;
  }

  footer > .container > .credit_and_country > .country > p {
    font-size: 16px;
  }
}

